this commit will enable interface for add new squad and view heros in the squad

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -37,7 +37,7 @@
 <div class="container">
     <!--    begin main template-->
     <div class="page-header">
-        <h1 id="h1-1">Welcome to Heroku Squad.</h1>
+        <h1 id="h1-1">Welcome to Hero Squad.</h1>
     </div>
 
     <div class="col-md-12">
